--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 """
 
 [dependencies]
+cosmwasm-storage = "0.14.0"
 cosmwasm-schema = "1.5.0"
 cosmwasm-std = { version = "1.5.0", features = [
   "cosmwasm_1_3",
